# portfolio

./: .gitignore  .gitmodules  README.md
algorithms/: README.md  animation.py  binary_search.py  euclids_algorithm.hs  extended_euclidean_algorithm.hs  max_sub_array_sum.py  polynomial_interpolation.py
algorithms/encryption/: README.md  rsa.py
algorithms/extended_euclidean_algorithm/: ExtendedEuclideanAlgorithm.hs  README.md  Test.hs  makefile  test.hs
algorithms/generate_subsets/: README.md  index.js
algorithms/generate_subsets_2/: README.md  index.js
algorithms/hash_algorithms/: README.md  sha224.py  sha256.py  sha512-256.py
algorithms/least_squares_estimation/: README.md  demo.py  least_squares_estimation.py
algorithms/modular_exponentiation/: ModularExponentiation.hs  README.md  Test.hs  makefile
algorithms/pathfinding/: README.md  dijkstras_algorithm4.py  pathfinding.py
books/: README.md
data_structures/: README.md
hash_algorithms/: sha1.py  sha224.py  sha256.py  sha384.py  sha512-224.py  sha512.py
misc/: README.md
misc/scheme_interpreter/: Main.hs  README.md  makefile  scheme-interpreter.cabal  standard_library.scm
misc/scheme_interpreter/src/: Main.hs
misc/scheme_interpreter/src/SchemeInterpreter/: Error.hs  Interpreter.hs  Parser.hs  State.hs  Types.hs
misc/scheme_interpreter/tests/: Tests.hs
misc/scheme_interpreter/tests/Tests/: Interpreter.hs  Parser.hs  Types.hs
presentations/: README.md  mapzen_internship.md  math_and_logic_in_hardware.md  style.sass
shapefile_parser/: shapefile.py
visualizations/: README.md
(+358 files in other folders)
